--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# JS config
-.DS_Store
-node_modules/
-/dist
-/public
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/build
