--- a/viewer/package.json
+++ b/viewer/package.json
@@ -2,11 +2,22 @@
   "name": "silovi_viewer",
   "version": "0.1.0",
   "private": true,
+  "description": "SiLoVi - Simple Log Viewer",
+  "main": "server.js",
+  "bin": "server.js",
+  "author": "Lyahim",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve --port 3000",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "node": "nodemon server.js"
+    "node": "nodemon server.js",
+    "pkg": "npm run build && copyfiles config.json start* ./../build/viewer & pkg server.js --config=./package.json --out-path=./../build/viewer/bin --debug > build.log"
+  },
+  "pkg": {
+    "assets": [
+      "dist/**/*"
+    ]
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
@@ -28,6 +39,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "nodemon": "^2.0.7",
