add load more lines feature

--- a/bridge/config.properties
+++ b/bridge/config.properties
@@ -2,6 +2,7 @@ logging.config=file:logback.xml
 root_log_folder=
 file_name_regex_pattern=.*.log
 tail_lines_count=100
+more_lines_count=20
 file_check_interval=500
 #auth_username=
 #auth_password=
