--- a/bridge/src/main/resources/application.properties
+++ b/bridge/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 root_log_folder=
 file_name_regex_pattern=.*.log
 tail_lines_count=100
+more_lines_count=50
 file_check_interval=500
 auth_username=
 auth_password=
