--- a/viewer/package.json
+++ b/viewer/package.json
@@ -49,6 +49,7 @@
     "copyfiles": "^2.4.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "pkg": "^4.4.9",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.9",
