--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ jobs:
               - mvn install -DskipTests
               - mvn package -DskipTests
               - mvn test
+          after_success:
+              - cd bridge
+              - mvn clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:report
 
         - language: node_js
           node_js: 12
