--- a/bridge/config.properties
+++ b/bridge/config.properties
@@ -1,10 +1,32 @@
-logging.config=file:logback.xml
+# root folder path for access log files. All files checked with 'file_name_regex_pattern' recursively under this folder. The search mechanism follows links too. 
+# This config cannot be null or empty!
 root_log_folder=
+
+# All selected file names going to pass against to this regex pattern. This is a simple regex pattern. By default select all files with log suffix. 
 file_name_regex_pattern=.*.log
+
+# This value controls how many lines is loaded when file is selected. Default: 100 line
 tail_lines_count=100
+
+# When it is possible to load more lines this value controls the count of lines. 
+# Load more lines possible in search mode where there are gaps among founded lines or just opened file where it is possible to scroll back the lines. Default: 20 line
 more_lines_count=20
+
+# During 'live polling' mode this value controls the check interval to file changes. This value set in milliseconds. Default: 500 ms
 file_check_interval=500
+
+# The system enables to protect bridge access with basic authentication. This two configuration set username and password. There are optionals.
 #auth_username=
 #auth_password=
 
+# The application runs over Spring boot therefore it is possible to use all standard Spring configuration.
+# to see more common Spring boot configuration read more at https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
+
+# logback.xml path what contains logging properties. It is standard config mechanism for logback. Read more about at http://logback.qos.ch/manual/configuration.html 
+logging.config=file:logback.xml
+
+# The Spring boot application runs on embedded Netty. Netty is an asynchronous event-driven network application framework
+# for rapid development of maintainable high performance protocol servers & clients. https://netty.io/
+# The default port for Spring application is 8080, if this isn't fit for requirements it possible to change with following configuration. It is optional.
 #server.port=8080
+ 
