--- a/bridge/src/main/resources/application-dev.properties
+++ b/bridge/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
+# THIS FILE USED ONLY DEVELOPMENT MODE, IF WANTED TO SET PRODUCTION CONFIGURATION USE config.properties IN ROOT FOLDER!! 
+
 root_log_folder=d:\\logtest
 #more_lines_count=20
 #auth_username=foo
