--- a/bridge/pom.xml
+++ b/bridge/pom.xml
@@ -17,6 +17,9 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<sonar.projectKey>lyahim_silovi</sonar.projectKey>
+		<sonar.organization>lyahim</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
