add sonar analysis for JS

--- a/viewer/sonar-project.properties
+++ b/viewer/sonar-project.properties
@@ -1,7 +1,12 @@
 sonar.organization=lyahim
-sonar.projectKey=lyahim_silovi
+sonar.projectKey=silovi-viewer
 
-sonar.language=js
+# This is the name and version displayed in the SonarCloud UI.
+sonar.projectName=silovi-viewer
+sonar.projectVersion=0.0.1
 
-sonar.exclusions=src/**/*.spec.js
-sonar.test.inclusions=src/**/*.spec.js
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
