--- a/bridge/pom.xml
+++ b/bridge/pom.xml
@@ -25,6 +25,11 @@
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.language>java</sonar.language>
+		<sonar.coverage.exclusions>
+			**/dto/*,
+			**/*Config*,
+			**/SiloviBridgeApplication.java
+		</sonar.coverage.exclusions>
 	</properties>
 
 	<dependencies>
