--- a/viewer/sonar-project.properties
+++ b/viewer/sonar-project.properties
@@ -1,12 +1,14 @@
 sonar.organization=lyahim
 sonar.projectKey=silovi-viewer
-
-# This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=silovi-viewer
 sonar.projectVersion=0.0.1
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src
+sonar.tests=test
+sonar.language=js
+sonar.profile=node
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.dynamicAnalysis=reuseReports
+
+sonar.javascript.jstest.reportsPath=reports
+sonar.javascript.lcov.reportPath=reports/coverage.lco
