add sonar analysis for JS

--- a/viewer/sonar-project.properties
+++ b/viewer/sonar-project.properties
@@ -3,12 +3,13 @@ sonar.projectKey=silovi-viewer
 sonar.projectName=silovi-viewer
 sonar.projectVersion=0.0.1
 
-sonar.sources=src
-sonar.tests=test
 sonar.language=js
 sonar.profile=node
 
+sonar.sources=src
+sonar.tests=src
+sonar.test.inclusions=**/__test__/**
+sonar.exclusions=**/__test__/**
 sonar.dynamicAnalysis=reuseReports
 
-sonar.javascript.jstest.reportsPath=reports
-sonar.javascript.lcov.reportPath=reports/coverage.lco
+sonar.testExecutionReportPaths=test-report.xml
