--- a/viewer/package.json
+++ b/viewer/package.json
@@ -16,7 +16,16 @@
     "pkg": "pkg server.js --config=./package.json --out-path=./../build/silovi-viewer/bin --debug > build.log",
     "zip-bundle": "cd ./../build/ && bestzip ./silovi-viewer-bundle.zip silovi-viewer/*",
     "zip": "cd ./../build/ && bestzip ./silovi-viewer.zip silovi-viewer/*",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest --coverage"
+  },
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "collectCoverage": true,
+    "testResultsProcessor": "jest-sonar-reporter"
   },
   "pkg": {
     "assets": [
@@ -49,6 +58,8 @@
     "copyfiles": "^2.4.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^26.6.3",
+    "jest-sonar-reporter": "^2.0.0",
     "pkg": "^4.4.9",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
