--- a/viewer/sonar-project.properties
+++ b/viewer/sonar-project.properties
@@ -12,4 +12,5 @@ sonar.test.inclusions=**/__test__/**
 sonar.exclusions=**/__test__/**
 sonar.dynamicAnalysis=reuseReports
 
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=test-report.xml
