--- a/viewer/package.json
+++ b/viewer/package.json
@@ -35,37 +35,37 @@
   "dependencies": {
     "abort-controller": "^3.0.0",
     "axios": "^0.21.1",
-    "core-js": "^3.6.5",
+    "core-js": "^3.12.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "filesize": "^6.1.0",
+    "filesize": "^6.3.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
-    "socket.io": "^3.1.0",
-    "socket.io-client": "^3.1.0",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.3",
     "typeface-roboto": "^1.1.13",
     "vue": "^2.6.11",
-    "vue-socket.io-extended": "^4.0.6",
-    "vuetify": "^2.2.11"
+    "vue-socket.io-extended": "^4.2.0",
+    "vuetify": "^2.4.11"
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
-    "bestzip": "^2.1.7",
+    "bestzip": "^2.2.0",
     "copyfiles": "^2.4.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.6.3",
     "jest-sonar-reporter": "^2.0.0",
-    "pkg": "^4.4.9",
-    "sass": "^1.19.0",
+    "pkg": "^4.5.1",
+    "sass": "^1.32.12",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.9",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.7.2"
   },
   "eslintConfig": {
     "root": true,
